Random Forest and print locale

--- a/NYC Taxi Trip Duration.ipynb
+++ b/NYC Taxi Trip Duration.ipynb
@@ -17,18 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv('train.csv')"
+    "df_train = pd.read_csv('data/train.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "4         40.782520                  N            435  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -242,10 +242,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>id2594143</td>\n",
+       "      <td>id3368889</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2016-06-10 23:17:17</td>\n",
-       "      <td>2016-02-19 19:25:04</td>\n",
+       "      <td>2016-01-12 18:48:44</td>\n",
+       "      <td>2016-05-16 19:40:28</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -374,7 +374,7 @@
        "               id     vendor_id      pickup_datetime     dropoff_datetime  \\\n",
        "count     1458644  1.458644e+06              1458644              1458644   \n",
        "unique    1458644           NaN              1380222              1380377   \n",
-       "top     id2594143           NaN  2016-06-10 23:17:17  2016-02-19 19:25:04   \n",
+       "top     id3368889           NaN  2016-01-12 18:48:44  2016-05-16 19:40:28   \n",
        "freq            1           NaN                    5                    5   \n",
        "mean          NaN  1.534950e+00                  NaN                  NaN   \n",
        "std           NaN  4.987772e-01                  NaN                  NaN   \n",
@@ -411,7 +411,7 @@
        "max         4.392103e+01                NaN   3.526282e+06  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "Name: store_and_fwd_flag, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
        "4          2016              3           26            13              38  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
        "4  0.480566  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,14 +1173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\RobertAlonso\\Anaconda2\\envs\\or-tools\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "/home/alulab/.conda/envs/kaggle/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
@@ -1205,7 +1205,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'en_US.utf8'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import locale\n",
+    "locale.setlocale(locale.LC_ALL, 'en_US.utf8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = 1861616151\n",
+    "type(locale.format(\"%d\", number, grouping=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -1215,14 +1257,17 @@
     "    start = int(time.time() * 1000)\n",
     "    scores = cross_val_score(clf, X, y, cv=5, scoring='neg_mean_squared_error')\n",
     "    end = int(time.time() * 1000)\n",
-    "    print(\"%s \\t\\t MSE: %0.2f (+/- %0.2f) Time: %d ms\" % \\\n",
+    "    print(\"%s \\t\\t MSE: %s (+/- %s) Time: %s ms\" % \\\n",
     "          (str(clf.__class__).split('.')[-1].replace('>','').replace(\"'\",''), \\\n",
-    "          scores.mean(), scores.std() * 2, end - start))"
+    "          locale.format(\"%0.2f\", scores.mean(), grouping=True),\n",
+    "          locale.format(\"%0.2f\", scores.std() * 2, grouping=True),\n",
+    "          locale.format(\"%d\", float(end - start), grouping=True)))\n",
+    "          #end - start))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -1239,16 +1284,56 @@
     "#     run_model(KNeighborsRegressor(), X, y)\n",
     "    run_model(XGBRegressor(silent=False), X, y)\n",
     "#     run_model(GaussianProcessRegressor(), X, y)\n",
-    "#     run_model(RandomForestRegressor(verbose=1), X, y)\n",
+    "    run_model(RandomForestRegressor(verbose=1), X, y)\n",
     "#     run_model(GradientBoostingRegressor(verbose=1), X, y)    \n",
     "#     run_model(MLPRegressor(verbose=True), X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegression \t\t MSE: -1,105,289.53 (+/- 256,791.21) Time: 5,952 ms\n",
+      "Ridge \t\t MSE: -10,396,452.23 (+/- 21,157,800.77) Time: 2,336 ms\n",
+      "SGDRegressor \t\t MSE: -27,488,561.64 (+/- 43,994,785.47) Time: 14,044 ms\n",
+      "XGBRegressor \t\t MSE: -23,028,788.68 (+/- 36,457,345.71) Time: 163,129 ms\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  2.8min finished\n",
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:    1.7s finished\n",
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  2.7min finished\n",
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:    1.7s finished\n",
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  2.7min finished\n",
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:    1.8s finished\n",
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  2.7min finished\n",
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:    1.6s finished\n",
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  2.7min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestRegressor \t\t MSE: -31,681,050.95 (+/- 41,293,820.50) Time: 826,227 ms\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:    1.8s finished\n"
+     ]
+    }
+   ],
    "source": [
     "run_models(X, y)"
    ]
@@ -1291,7 +1376,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_train['pickup_weekday'] = df_train['pickup_datetime'].apply(get_weekday)\n",
@@ -1543,7 +1630,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_train['distance'] = df_train.apply(haversine(row['pickup_longitude'], row['pickup_latitude'],\n",
@@ -2018,7 +2107,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_train = pd.read_csv('train.csv')\n",
@@ -2211,7 +2302,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
@@ -2520,7 +2613,9 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pd.DataFrame(np.hstack((np.reshape(df_id['id'].values, (-1,1)), np.reshape(y_pred_reg, (-1,1)))), \n",
@@ -2605,7 +2700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
